# quali-storymap-embeds

./: .gitignore  README.md  _embed_css.py  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: all_results.json  continuo_3modelos.json  estacoes_convencionais_ana.csv  estacoes_convencionais_todas.csv  estacoes_telemetricas_ana.csv  estacoes_telemetricas_ana.dbf  estacoes_telemetricas_ana.shp  estacoes_telemetricas_ana.shx  estacoes_telemetricas_todas.csv  estacoes_telemetricas_todas.shp  estacoes_telemetricas_todas.shx  eventos_base_lumped.json  hidrogramas.csv  hidrogramas_continuos.csv  hidrogramas_v2.csv  hyperparam_search.csv  ottobacias_attrs.csv  serie_bacia.csv  summary.csv  summary_continuous.json
pages/: 10_hiperparametros.py  11_fase2_cronograma.py  12_dados.py  13_hidrograma_continuo.py  14_hidrograma_eventos.py  15_metodologia_short.py  16_melhor_pior_modo.py  17_hidrograma_continuo_.py  18_hidrograma_eventos_.py  19_ranking_nse.py  1_mapa_telemetricas.py  20_hipoteses_h1_h5.py  21_parametros_aprendidos.py  22_limitacoes_fase1.py  23_kpis_fase1.py  24_ranking_continuo.py  2_tradeoff.py  3_convencionais_mapa.py  4_convencionais_duracao.py  5_telemetricas_distribuicao.py  6_revisao_bibliografica.py  7_metodologia.py  8_resultados_ablacao.py  9_explorador_hidrogramas.py
