[project]
name = "quali-storymap-embeds"
version = "0.1.0"
description = "Widgets Streamlit para embed no StoryMap ArcGIS da qualificacao TTD-SCS-LSTM"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.18",
    "pydeck>=0.9",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.9",
]
